--- a/index.html
+++ b/index.html
@@ -332,12 +332,11 @@
   <section id="price" class="price bg-light text-center padding">
     <div class="container">
       <div class="col-lg-12">
-        <h1 class="display-3">Стоимость</h1>
-        <h2 class="display-5">При оплате:</h2>
-        <h2 class="display-4">до 1 февраля — <span class="sale">12&nbsp;000&nbsp;₽</span></h2>
-        <h2 class="display-4">до 1 марта — <span class="sale">15&nbsp;000&nbsp;₽</span></h2>
-        <h2 class="display-4">после 1 марта — <span class="sale">18&nbsp;000&nbsp;₽</span></h2>
-        <!-- <h1 class="display-3">Стоимость участия: 18&nbsp;000&nbsp;₽</h1> -->
+        <h1 class="display-4">Стоимость</h1>
+        <h2 class="display-6">при оплате:</h2>
+        <h2 class="display-4">до 1 февраля: <span class="sale">12&nbsp;000&nbsp;₽</span></h2>
+        <h2 class="display-4">до 1 марта: <span class="sale">15&nbsp;000&nbsp;₽</span></h2>
+        <h2 class="display-4">после 1 марта: <span class="sale">18&nbsp;000&nbsp;₽</span></h2>
         <br /><br />
         <p>* Об условиях фиксирования ранней цены и дополнительных скидках уточняйте у <a href="#contacts">организаторов</a></p>
       </div>
@@ -345,10 +344,49 @@
 
 
 
+  <!-- Расписание -->
+  <section id="about-trainer" class=" padding">
+    <div class="container">
+      <div class="text-center col-lg-12">
+        <h1 class="display-4">Расписание</h1><br />
+      </div>
+      <div class="table-responsive-sm" align="center">
+
+
+        <table class="table table-bordered table-nonfluid">
+          <tbody>
+            <tr>
+              <td>МОСКВА</td>
+              <td>16-17 марта<br />19-20 октября</td>
+            </tr>
+            <tr>
+              <td>САНКТ-ПЕТЕРБУРГ</td>
+              <td>14-15 сентября</td>
+            </tr>
+            <tr>
+              <td>КРАСНОЯРСК</td>
+              <td>20-21 апреля<br />26-27 октября</td>
+            </tr>
+            <tr>
+              <td>УФА</td>
+              <td>11-12 мая</td>
+            </tr>
+            <tr>
+              <td>КРАСНОДАР</td>
+              <td>28-29 сентября</td>
+            </tr>
+          </tbody>
+        </table>
+
+
+      </div>
+    </div>
+  </section>
+
 
 
   <!-- 6 Программа тренинга -->
-  <section id="schedule" class="program padding">
+  <section id="schedule" class="bg-light program padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Программа тренинга</h1>
@@ -467,7 +505,7 @@
 
 
   <!-- 7 Формат тренинга + ФОТО -->
-  <section id="subject" class="bg-light padding">
+  <section id="subject" class=" padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Формат тренинга</h1>
@@ -563,7 +601,7 @@
 
 
   <!-- ВИДЕО Легендарный -->
-  <section id="video" class="text-center padding">
+  <section id="video" class=" bg-dark text-center padding">
     <div class="container">
       <p class="lead mb-1">
         <h1 class="display-4">О тренинге</h1>
