--- a/index.html
+++ b/index.html
@@ -346,41 +346,50 @@
 
   <!-- Расписание -->
   <section id="about-trainer" class=" padding">
+
     <div class="container">
-      <div class="text-center col-lg-12">
+      <div class="text-center">
         <h1 class="display-4">Расписание</h1><br />
       </div>
-      <div class="table-responsive-sm" align="center">
-
-
-        <table class="table table-bordered table-nonfluid">
-          <tbody>
-            <tr>
-              <td>МОСКВА</td>
-              <td>16-17 марта<br />19-20 октября</td>
-            </tr>
-            <tr>
-              <td>САНКТ-ПЕТЕРБУРГ</td>
-              <td>14-15 сентября</td>
-            </tr>
-            <tr>
-              <td>КРАСНОЯРСК</td>
-              <td>20-21 апреля<br />26-27 октября</td>
-            </tr>
-            <tr>
-              <td>УФА</td>
-              <td>11-12 мая</td>
-            </tr>
-            <tr>
-              <td>КРАСНОДАР</td>
-              <td>28-29 сентября</td>
-            </tr>
-          </tbody>
-        </table>
-
-
+      <div class="row">
+        <div class="col-sm-12 col-md-3 m-auto text-center text-info">
+          <div class=" gi-8x">
+            <i class="far fa-calendar-alt"></i>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-9">
+          <div class="table-responsive-sm" align="center">
+            <table class="table table-bordered ">
+              <tbody>
+                <tr>
+                  <td>МОСКВА</td>
+                  <td>16-17 марта<br />19-20 октября</td>
+                </tr>
+                <tr>
+                  <td>САНКТ-ПЕТЕРБУРГ</td>
+                  <td>14-15 сентября</td>
+                </tr>
+                <tr>
+                  <td>КРАСНОЯРСК</td>
+                  <td>20-21 апреля<br />26-27 октября</td>
+                </tr>
+                <tr>
+                  <td>УФА</td>
+                  <td>11-12 мая</td>
+                </tr>
+                <tr>
+                  <td>КРАСНОДАР</td>
+                  <td>28-29 сентября</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
+
+
+
   </section>
 
 
