--- a/index.html
+++ b/index.html
@@ -352,40 +352,40 @@
         <h1 class="display-4">Расписание</h1><br />
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-3 m-auto text-center text-info">
+        <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
           <div class=" gi-8x">
             <i class="far fa-calendar-alt"></i>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-9">
-          <div class="table-responsive-sm" align="center">
-            <table class="table table-bordered ">
-              <tbody>
-                <tr>
-                  <td>МОСКВА</td>
-                  <td>16-17 марта<br />19-20 октября</td>
-                </tr>
-                <tr>
-                  <td>САНКТ-ПЕТЕРБУРГ</td>
-                  <td>14-15 сентября</td>
-                </tr>
-                <tr>
-                  <td>КРАСНОЯРСК</td>
-                  <td>20-21 апреля<br />26-27 октября</td>
-                </tr>
-                <tr>
-                  <td>УФА</td>
-                  <td>11-12 мая</td>
-                </tr>
-                <tr>
-                  <td>КРАСНОДАР</td>
-                  <td>28-29 сентября</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          </div> -->
+      </div>
+      <div class="col-sm-12 col-md-12">
+        <div class="table-responsive-sm" align="center">
+          <table class="table table-bordered table-nonfluid">
+            <tbody>
+              <tr>
+                <td>МОСКВА</td>
+                <td>16-17 марта<br />19-20 октября</td>
+              </tr>
+              <tr>
+                <td>САНКТ-ПЕТЕРБУРГ</td>
+                <td>14-15 сентября</td>
+              </tr>
+              <tr>
+                <td>КРАСНОЯРСК</td>
+                <td>20-21 апреля<br />26-27 октября</td>
+              </tr>
+              <tr>
+                <td>УФА</td>
+                <td>11-12 мая</td>
+              </tr>
+              <tr>
+                <td>КРАСНОДАР</td>
+                <td>28-29 сентября</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
+    </div>
     </div>
 
 
@@ -864,7 +864,7 @@
   </section> -->
 
   <!-- Testimonials -->
-  <!-- <section class="testimonials text-center bg-light">
+  <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
@@ -892,11 +892,11 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 
   <!-- Call to Action -->
-  <section class="call-to-action text-white text-center">
+  <!-- <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -918,7 +918,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Footer -->
