--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
   </section> -->
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <!-- <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
@@ -892,11 +892,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Call to Action -->
-  <!-- <section class="call-to-action text-white text-center">
+  <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -918,7 +918,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 
   <!-- Footer -->
