--- a/index.html
+++ b/index.html
@@ -787,13 +787,51 @@
   </section>
 
 
+  <!-- Отзывы текстовые -->
+  <section class="testimonials text-center bg-light">
+    <div class="container">
+      <h2 class="mb-5">Что о нас говорят люди...</h2>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+            <h5>Лариса Балабанова</h5>
+            <p class="font-weight-light mb-0">"Татьяна, благодарю вас за этот полезный тренинг!👏"</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+            <h5>Екатерина Родина</h5>
+            <p class="font-weight-light mb-0">"Очень крутой тренинг! Нереально прокачивает мозг!"</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+            <h5>Роман Яковенко</h5>
+            <p class="font-weight-light mb-0">"Танюша, респект Вам пожизненно!"</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-4.jpg" alt="">
+            <h5>Станислав Лысенко</h5>
+            <p class="font-weight-light mb-0">"У меня были большие сомнения по поводу того, что скорочтение мне
+              необходимо. Спасибо Вам большое, с удовольствием прошел бы этот треннинг еще раз!"</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
 
 
   <!-- 8 Контакты организаторов -->
-  <section id="contacts" class="bg-light padding">
+  <section id="contacts" class=" padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Контакты организаторов</h1><br />
@@ -863,36 +901,7 @@
     </div>
   </section> -->
 
-  <!-- Testimonials -->
-  <!-- <section class="testimonials text-center bg-light">
-    <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice
-              landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
+
 
 
   <!-- Call to Action -->
