--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="collapse navbar-collapse" id="navbarResponsive" style="font-size:0.8rem">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#home">Начало</a>
@@ -56,6 +56,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" js-scroll-trigger href="#price">Стоимость</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" js-scroll-trigger href="#schedule">Расписание</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" js-scroll-trigger href="#schedule">Программа</a>
@@ -345,7 +348,7 @@
 
 
   <!-- Расписание -->
-  <section id="about-trainer" class=" padding">
+  <section id="schedule" class=" padding">
 
     <div class="container">
       <div class="text-center">
