schedule mininmal fixes

--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
 
     <div class="container">
       <div class="text-center">
-        <h1 class="display-4">Расписание</h1><br />
+        <h1 class="display-4">Расписание</h1>
+        <h2 class="display-6">открытых тренингов на 2019 год</h2>
+        <br />
       </div>
       <div class="row">
         <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
@@ -387,6 +389,9 @@
             </tbody>
           </table>
         </div>
+        <br /><br />
+        <p>По вопросам проведения тренинга в корпоративном формате обращайтесь к <a href="#contacts">организаторам</a>
+          ближайшего к вам региона</p>
       </div>
     </div>
     </div>
