Fix photo testimonial quality

--- a/index.html
+++ b/index.html
@@ -818,7 +818,9 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
             <h5>Роман Яковенко</h5>
-            <p class="font-weight-light mb-0">"Танюша, респект Вам пожизненно!"</p>
+            <p class="font-weight-light mb-0">"Танюша, респект Вам пожизненно!💪👍 После Вашего тренинга в Краснодаре я
+              просто "проглатыааю" книги!!📖📚
+              Но вот у меня один нескромный вопрос: акогда будет Ваш тренинг по НЛП?🤔"</p>
           </div>
         </div>
         <div class="col-lg-3">
