--- a/index.html
+++ b/index.html
@@ -804,14 +804,37 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
             <h5>Лариса Балабанова</h5>
-            <p class="font-weight-light mb-0">"Татьяна, благодарю вас за этот полезный тренинг!👏"</p>
+            <p class="font-weight-light mb-0">"Татьяна, благодарю вас 👏 за этот полезный тренинг! 👌
+              Теперь я читаю больше книг, и меньше трачу время на это 👍
+              В первую неделю я прочитала 500 страниц за 3.30ч, 😇 раньше бы я читала эту книгу минимум неделю😂.
+              Благодарю вас ..."</p>
+            <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover"
+              data-placement="top" data-content="Татьяна, благодарю вас 👏 за этот полезный тренинг! 👌
+              Теперь я читаю больше книг, и меньше трачу время на это 👍
+              В первую неделю я прочитала 500 страниц за 3.30ч, 😇 раньше бы я читала эту книгу минимум неделю😂.
+              Благодарю вас 🔆 и желаю вам научить, как можно больше людей этому нужному и полезному навыку 😍👍">
+              Показать полностью
+            </button>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
             <h5>Екатерина Родина</h5>
-            <p class="font-weight-light mb-0">"Очень крутой тренинг! Нереально прокачивает мозг!"</p>
+            <p class="font-weight-light mb-0">"Очень крутой тренинг: 😱😍
+              Нереально прокачивает мозг.
+              Я даже не представляла, что могу намного больше и лучше! Действительно почувствовала, что мозг можно
+              накачать как мышцы в спортзале за счет всех выполняемых ...
+              "</p>
+            <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover"
+              data-placement="top" data-content="Очень крутой тренинг: 😱😍
+                Нереально прокачивает мозг.
+                Я даже не представляла, что могу намного больше и лучше! Действительно почувствовала, что мозг можно
+                накачать как мышцы в спортзале за счет всех выполняемых на тренинге упражнений. Очень советую Всем, кто
+                хочет повысить не только скорость чтения, но и вообще уровень своей эффективности и работоспособности!
+                Стала любить себя и свой мозг ещё сильнее 😄❤️">
+              Показать полностью
+            </button>
           </div>
         </div>
         <div class="col-lg-3">
@@ -827,8 +850,31 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-4.jpg" alt="">
             <h5>Станислав Лысенко</h5>
-            <p class="font-weight-light mb-0">"У меня были большие сомнения по поводу того, что скорочтение мне
-              необходимо. Спасибо Вам большое, с удовольствием прошел бы этот треннинг еще раз!"</p>
+            <p class="font-weight-light mb-0">"У меня были большие сомнения по поводу того что скорочтение мне
+              необходимо и оно сделает мою жизнь лучше. Но ведь нас окружает много информации, в наш высоко
+              технологичный век большое значение имеет то как быстро...
+              "
+            </p>
+
+            <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover"
+              data-placement="top" data-content="У меня были большие сомнения по поводу того что скорочтение мне
+              необходимо и оно сделает мою жизнь лучше. Но ведь нас окружает много информации, в наш высоко
+              технологичный век большое значение имеет то как быстро ты перевариваешь полученные знания. Поэтому я
+              решил повти на этот курс. Назвать его просто занятием по увеличению скорости чтения будет крайне
+              некорректно. Скорочтение достигается работай над разными зонами человеческого мозга. Это работа с
+              внутренней уверенностью человека, потому что одно из важных качеств скорочтица это уверенность в том что
+              он может это делать.
+              Необходимо натренировать воображение, без которого невозможно достичь быстрой скорости получения
+              информации. Нужно знать как устроен человеческий организм и в каком положение тела появляется скорость
+              чтения. И наконец просто привычка читать со своей нормальной скоростью не дает разогнаться. Эти все
+              качества тренируются на курсе скорочтения который проводит Татьяна. Она использует свой большой опыт и
+              огромные знания для того чтобы мы получили максимальный результат. Я ей очень благодарен за этот тренинг.
+              Я благодарен обоим Татьянам, организатору который меня уговорил прочти этот курс и учителю который
+              наделил меня бесценными знаниями.">
+              Показать полностью
+            </button>
+
+
           </div>
         </div>
       </div>
@@ -1001,6 +1047,14 @@
 
   <script src="js/global.js"></script>
 
+  <script>
+    $(function () {
+      $('[data-toggle="popover"]').popover({
+        placement: 'top',
+        trigger: 'click'
+      })
+    })
+  </script>
 
 
   <!-- Yandex.Metrika counter -->
