minor fixes (musthead)

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
   </nav>
 
   <!-- Masthead -->
-  <header id="home" class="masthead text-white text-center mt-4">
+  <header id="home" class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-12 mx-auto">
-          <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 30px ">Тренинг <br />"Скорочтение
+          <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг <br />"Скорочтение
             экспресс-методом"</h1>
           <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">16-17 марта 2019, Москва</h1>
         </div>
