fix html error, add robots.txt, add sitemap.xml

--- a/index.html
+++ b/index.html
@@ -47,72 +47,74 @@
           <a class="nav-link js-scroll-trigger" href="#whom">Для&nbsp;кого?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#uniq">Уникальность</a>
+          <a class="nav-link js-scroll-trigger" href="#uniq">Уникальность</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#result">Результаты</a>
+          <a class="nav-link js-scroll-trigger" href="#result">Результаты</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#register">Заявка</a>
+          <a class="nav-link js-scroll-trigger" href="#register">Заявка</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#price">Стоимость</a>
+          <a class="nav-link js-scroll-trigger" href="#price">Стоимость</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#schedule">Расписание</a>
+          <a class="nav-link js-scroll-trigger" href="#schedule">Расписание</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#schedule">Программа</a>
+          <a class="nav-link js-scroll-trigger" href="#schedule">Программа</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#subject">Формат</a>
+          <a class="nav-link js-scroll-trigger" href="#subject">Формат</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#video">Видео</a>
+          <a class="nav-link js-scroll-trigger" href="#video">Видео</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#about-trainer">О&nbsp;тренере</a>
+          <a class="nav-link js-scroll-trigger" href="#about-trainer">О&nbsp;тренере</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#video-comments">Отзывы</a>
+          <a class="nav-link js-scroll-trigger" href="#video-comments">Отзывы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" js-scroll-trigger href="#contacts">Контакты</a>
+          <a class="nav-link js-scroll-trigger" href="#contacts">Контакты</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <!-- Masthead -->
-  <header id="home" class="masthead text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-12 mx-auto">
-          <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг <br />"Скорочтение
-            экспресс-методом"</h1>
-          <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">16-17 марта 2019, Москва</h1>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <br />
-          <form>
-            <div class="form-row">
+  <section id="home">
+    <header id="home" class="masthead text-white text-center">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12 mx-auto">
+            <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг <br />"Скорочтение
+              экспресс-методом"</h1>
+            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">16-17 марта 2019, Москва</h1>
+          </div>
+          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+            <br />
+            <form>
+              <div class="form-row">
 
-              <div class="col-12 col-md-6 mt-2">
-                <button type="submit" onclick="goToAnchor('register')" class="btn btn-block btn-lg btn-primary">Оставить
-                  заявку!
-                </button>
+                <div class="col-12 col-md-6 mt-2">
+                  <button type="submit" onclick="goToAnchor('register')" class="btn btn-block btn-lg btn-primary">Оставить
+                    заявку!
+                  </button>
+                </div>
+                <div class="col-12 col-md-6 mt-2">
+                  <button type="submit" onclick="goToAnchor('ask-phone-call')" class="btn btn-block btn-lg btn-dark">Обратный
+                    Звонок!</button>
+                </div>
               </div>
-              <div class="col-12 col-md-6 mt-2">
-                <button type="submit" onclick="goToAnchor('ask-phone-call')" class="btn btn-block btn-lg btn-dark">Обратный
-                  Звонок!</button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
+  </section>
 
 
   <!-- 5 Зачем ? -->
