--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom JavaScript for this theme -->
-  <script src="vendor/scrolling-nav/js/scrolling-nav.js"></script>
+  <!-- <script src="vendor/scrolling-nav/js/scrolling-nav.js"></script> -->
 
   <script src="js/global.js"></script>
 
