--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#schedule">Расписание</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#schedule">Программа</a>
+          <a class="nav-link js-scroll-trigger" href="#program">Программа</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#subject">Формат</a>
@@ -406,7 +406,7 @@
 
 
   <!-- 6 Программа тренинга -->
-  <section id="schedule" class="bg-light program padding">
+  <section id="program" class="bg-light program padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Программа тренинга</h1>
