--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 
   <!-- Расписание -->
-  <section id="schedule" class=" padding">
+  <section id="schedule" class="padding">
 
     <div class="container">
       <div class="text-center">
@@ -360,14 +360,19 @@
         <br />
       </div>
       <div class="row">
+        <div class="col-sm-12">
+          <img src="/img/map-schedule.png" title="Карта расписания." />
+          <br /><br />
+        </div>
         <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
           <div class=" gi-8x">
             <i class="far fa-calendar-alt"></i>
           </div> -->
       </div>
+
       <div class="col-sm-12 col-md-12">
         <div class="table-responsive-sm" align="center">
-          <table class="table table-bordered table-nonfluid">
+          <table class="table table-sm table-bordered table-nonfluid" style="font-size:0.8rem">
             <tbody>
               <tr>
                 <td>МОСКВА</td>
@@ -392,7 +397,7 @@
             </tbody>
           </table>
         </div>
-        <br /><br />
+        <br />
         <p>По вопросам проведения тренинга в корпоративном формате обращайтесь к <a href="#contacts">организаторам</a>
           ближайшего к вам региона</p>
       </div>
