responsive map-schedule (2 vars) + img-fuild class

--- a/index.html
+++ b/index.html
@@ -357,13 +357,16 @@
       <div class="text-center">
         <h1 class="display-4">Расписание</h1>
         <h2 class="display-6">открытых тренингов на 2019 год</h2>
-        <br />
       </div>
       <div class="row">
-        <div class="col-sm-12">
-          <img src="/img/map-schedule.png" title="Карта расписания." />
-          <br /><br />
+        <div class="col-sm-12 d-none d-sm-block">
+          <img class="img-fluid" src="/img/map-schedule.png" title="Расписание треннингов" alt="Расписание треннингов" />
+          <br /><br /><br />
         </div>
+        <div class="d-sm-none">
+          <img class="img-fluid" src="/img/map-schedule-mobile.png" title="Расписание треннингов" alt="Расписание треннингов" />
+        </div>
+        <br />
         <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
           <div class=" gi-8x">
             <i class="far fa-calendar-alt"></i>
