meta name="keywords" content="скорочтение, Карпицкая,

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Тренинг — Скорочтение экспресс-методом! Читать быстро, скорочтение для взрослых, развитие интеллекта. Авторы методики: Татьянка Карпицкая и Андрей Кёниг">
-  <meta name="keywords" content="читаем быстро,cкорочтение для взрослых,быстро скорочтение,скорочтение развитие интеллект,Татьяна Карпицкая,Андрей Кёниг,Скорочтение курс">
+  <meta name="keywords" content="скорочтение, Карпицкая, читаем быстро,cкорочтение для взрослых,быстро скорочтение,скорочтение развитие интеллект,Татьяна Карпицкая,Андрей Кёниг,Скорочтение курс">
   <meta name="author" content="rownarts.com">
 
   <title>Тренинг — Скорочтение экспресс-методом</title>
