--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
       </div>
       <div class="row">
         <div class="col-sm-12 d-none d-sm-block">
-          <img class="img-fluid" src="/img/map-schedule.png" title="Расписание треннингов" alt="Расписание треннингов" />
+          <img class="img-fluid" src="/img/map-schedule.jpg" title="Расписание треннингов" alt="Расписание треннингов" />
           <br /><br /><br />
         </div>
         <div class="d-sm-none">
-          <img class="img-fluid" src="/img/map-schedule-mobile.png" title="Расписание треннингов" alt="Расписание треннингов" />
+          <img class="img-fluid" src="/img/map-schedule-mobile.jpg" title="Расписание треннингов" alt="Расписание треннингов" />
         </div>
         <br />
         <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
@@ -399,7 +399,7 @@
               </tr>
               <tr>
                 <td>КРАСНОЯРСК</td>
-                <td>20-21 апреля<br />26-27 октября</td>
+                <td>13-14 апреля<br />26-27 октября</td>
               </tr>
               <tr>
                 <td>УФА</td>
