стоимость февраль егкт щаа

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <div class="col-lg-12">
         <h1 class="display-4">Стоимость</h1>
         <h2 class="display-6">при оплате:</h2>
-        <h2 class="display-4">до 1 февраля: <span class="sale">12&nbsp;000&nbsp;₽</span></h2>
+        <!-- <h2 class="display-4">до 1 февраля: <span class="sale">12&nbsp;000&nbsp;₽</span></h2> -->
         <h2 class="display-4">до 1 марта: <span class="sale">15&nbsp;000&nbsp;₽</span></h2>
         <h2 class="display-4">после 1 марта: <span class="sale">18&nbsp;000&nbsp;₽</span></h2>
         <br /><br />
