--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,18 @@
 
 
   <script>
+    $(function(){ 
+     var navMain = $(".navbar-collapse"); // avoid dependency on #id
+     // "a:not([data-toggle])" - to avoid issues caused
+     // when you have dropdown inside navbar
+     navMain.on("click", "a:not([data-toggle])", null, function () {
+         navMain.collapse('hide');
+     });
+ });
+  </script>
+
+
+  <script>
     $(document).ready(function () {
       $('.owl-carousel').owlCarousel({
         loop: true,
