--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@
 
 
   <!-- Оставить заявку -->
-  <section id="register" class="showcase">
+  <section  class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text text-center">
+        <div id="register" class="col-lg-6 order-lg-1 my-auto showcase-text text-center">
           <h2>Оставить заявку</h2>
           <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
             <div class="form-group">
@@ -331,9 +331,9 @@
           </form>
         </div>
       </div>
-      <div id="ask-phone-call" class="row no-gutters">
+      <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text  text-center">
+        <div id="ask-phone-call" class="col-lg-6 my-auto showcase-text  text-center">
           <h2>Обратный звонок</h2>
           <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
             <div class="form-group">
