fix navigation menu

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive" style="font-size:0.8rem">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0 justify-content-center" style="margin: 0 auto">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#home">Начало</a>
         </li>
