--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Тренинг — Скорочтение экспресс-методом! Читать быстро, скорочтение для взрослых, развитие интеллекта. Авторы методики: Татьянка Карпицкая и Андрей Кёниг">
-  <meta name="keywords" content="скорочтение, Карпицкая, читаем быстро,cкорочтение для взрослых,быстро скорочтение,скорочтение развитие интеллект,Татьяна Карпицкая,Андрей Кёниг,Скорочтение курс, скорочтение Карпицкая">
+  <meta name="description"
+    content="Тренинг — Скорочтение экспресс-методом! Читать быстро, скорочтение для взрослых, развитие интеллекта. Авторы методики: Татьянка Карпицкая и Андрей Кёниг">
+  <meta name="keywords"
+    content="скорочтение, Карпицкая, читаем быстро,cкорочтение для взрослых,быстро скорочтение,скорочтение развитие интеллект,Татьяна Карпицкая,Андрей Кёниг,Скорочтение курс, скорочтение Карпицкая">
   <meta name="author" content="rownarts.com">
 
   <title>Тренинг — Скорочтение экспресс-методом</title>
@@ -48,8 +50,8 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -107,9 +109,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг <br />"Скорочтение
+            <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг
+              <br />"Скорочтение
               экспресс-методом"</h1>
-            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">16-17 марта 2019, Москва</h1>
+            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">14-15 сентября 2019, Санкт-Петербург</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <br />
@@ -117,12 +120,14 @@
               <div class="form-row">
 
                 <div class="col-12 col-md-6 mt-2">
-                  <button type="submit" onclick="goToAnchor('register')" class="btn btn-block btn-lg btn-primary">Оставить
+                  <button type="submit" onclick="goToAnchor('register')"
+                    class="btn btn-block btn-lg btn-primary">Оставить
                     заявку!
                   </button>
                 </div>
                 <div class="col-12 col-md-6 mt-2">
-                  <button type="submit" onclick="goToAnchor('ask-phone-call')" class="btn btn-block btn-lg btn-dark">Обратный
+                  <button type="submit" onclick="goToAnchor('ask-phone-call')"
+                    class="btn btn-block btn-lg btn-dark">Обратный
                     Звонок!</button>
                 </div>
               </div>
@@ -232,7 +237,8 @@
           <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за всеми
             трендами </li>
           <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу, но
-            принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и детство :)</li>
+            принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и детство :)
+          </li>
           <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии и сидите ночами за книгами) Верните в
             своё расписание заслуженное время для личной жизни</li>
           <li>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья :) Кинотеатр у вас в голове по
@@ -309,11 +315,12 @@
 
 
   <!-- Оставить заявку -->
-  <section  class="showcase">
+  <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img"
+          style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div id="register" class="col-lg-6 order-lg-1 my-auto showcase-text text-center">
           <h2>Оставить заявку</h2>
           <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
@@ -361,7 +368,8 @@
         <h2 class="display-4">до 1 октября: <span class="sale">15&nbsp;000&nbsp;₽</span></h2>
         <h2 class="display-4">после 1 октября: <span class="sale">18&nbsp;000&nbsp;₽</span></h2>
         <br /><br />
-        <p>* Об условиях фиксирования ранней цены и дополнительных скидках уточняйте у <a href="#contacts">организаторов</a></p>
+        <p>* Об условиях фиксирования ранней цены и дополнительных скидках уточняйте у <a
+            href="#contacts">организаторов</a></p>
       </div>
   </section>
 
@@ -377,11 +385,13 @@
       </div>
       <div class="row">
         <div class="col-sm-12 d-none d-sm-block">
-          <img class="img-fluid" src="/img/map-schedule.png" title="Расписание треннингов" alt="Расписание треннингов" />
+          <img class="img-fluid" src="/img/map-schedule.png" title="Расписание треннингов"
+            alt="Расписание треннингов" />
           <br /><br /><br />
         </div>
         <div class="d-sm-none">
-          <img class="img-fluid" src="/img/map-schedule-mobile.png" title="Расписание треннингов" alt="Расписание треннингов" />
+          <img class="img-fluid" src="/img/map-schedule-mobile.png" title="Расписание треннингов"
+            alt="Расписание треннингов" />
         </div>
         <br />
         <!-- <div class="col-sm-12 col-md-3 m-auto text-center text-info">
@@ -633,8 +643,8 @@
       <br />
 
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0"
+          allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <br />
       <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кёниг</p>
@@ -711,78 +721,78 @@
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_2z7dQUSKRg" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_2z7dQUSKRg" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Lm9VFqFCF0Q" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Lm9VFqFCF0Q" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cB02gUHvw3s" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cB02gUHvw3s" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LjdUSbNKn2g" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LjdUSbNKn2g" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/t0TG5Raezbs" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/t0TG5Raezbs" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GDakPKnVz1c" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GDakPKnVz1c" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eoe7gnXonWk" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eoe7gnXonWk" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QeeJadkjXMI" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QeeJadkjXMI" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JJtHC62h_Z8" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JJtHC62h_Z8" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
 
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IV_7EF54RkA" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IV_7EF54RkA" frameborder="0"
+            allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <!-- /carousel-item -->
@@ -890,7 +900,8 @@
                 обеспечившие мероприятие на высочайшем уровне и...
                 "</p>
               <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover"
-                data-placement="top" data-content="Прошёл тренинг скорочтение. С гордостью могу сказать, что за два дня стал читать быстрее в 4 раза. Шикарный тренер, знающий своё дело, грамотные органтзаторы, обеспечившие мероприятие на высочайшем уровне и моя упорная работа позволили мне добиться высоких результатов. Уверен, что за месяц самостоятельной работы я разгонюсь до скорости более 5000 знаков в минуту">
+                data-placement="top"
+                data-content="Прошёл тренинг скорочтение. С гордостью могу сказать, что за два дня стал читать быстрее в 4 раза. Шикарный тренер, знающий своё дело, грамотные органтзаторы, обеспечившие мероприятие на высочайшем уровне и моя упорная работа позволили мне добиться высоких результатов. Уверен, что за месяц самостоятельной работы я разгонюсь до скорости более 5000 знаков в минуту">
                 Показать полностью
               </button>
             </div>
@@ -905,7 +916,8 @@
                 "</p>
 
               <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover"
-                data-placement="top" data-content="Урррр, совершенно дивный курс. Отныне, один из самых полезных козырей в моем рукаве - техники скорочтения. Как выяснилось - умение быстрее читать и запоминать - лишь косвенная выгода. Тренинг напрямую влияет на развитие мышления, запоминания и концентрации внимания. Огромное спасибо Танюше Карпицкой за то, что сделала нас лучшей версией себя. Теперь будем успевать быть в огрооомном потоке информации, который, с каждым днем, становится все больше. А также огромная благодарность очаровательному тренеру за то, что теперь я получаю еще большее удовольствие от чтения, чем раньше. Оно стало увлекательнее, ярче и в разы интереснее. Прямо как в детстве. Никогда бы не подумал, что, открывая книгу, можно вместо букв и строчек видеть красивые фильмы в 3D.">
+                data-placement="top"
+                data-content="Урррр, совершенно дивный курс. Отныне, один из самых полезных козырей в моем рукаве - техники скорочтения. Как выяснилось - умение быстрее читать и запоминать - лишь косвенная выгода. Тренинг напрямую влияет на развитие мышления, запоминания и концентрации внимания. Огромное спасибо Танюше Карпицкой за то, что сделала нас лучшей версией себя. Теперь будем успевать быть в огрооомном потоке информации, который, с каждым днем, становится все больше. А также огромная благодарность очаровательному тренеру за то, что теперь я получаю еще большее удовольствие от чтения, чем раньше. Оно стало увлекательнее, ярче и в разы интереснее. Прямо как в детстве. Никогда бы не подумал, что, открывая книгу, можно вместо букв и строчек видеть красивые фильмы в 3D.">
                 Показать полностью
               </button>
 
@@ -1009,7 +1021,8 @@
           <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" name="email" class="form-control form-control-lg" placeholder="Введите свой Email" />
+                <input type="email" name="email" class="form-control form-control-lg"
+                  placeholder="Введите свой Email" />
                 <input type="hidden" name="message" value="Заявка на учаестие" />
               </div>
               <div class="col-12 col-md-3">
@@ -1049,7 +1062,8 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul> -->
-          <p class="text-muted small mb-4 mb-lg-0">&copy; sch-em.ru 2018. All Rights Reserved. Design by <a href="http://rownarts.com">rownarts.com</a></p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; sch-em.ru 2018. All Rights Reserved. Design by <a
+              href="http://rownarts.com">rownarts.com</a></p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
@@ -1113,14 +1127,14 @@
 
 
   <script>
-    $(function(){ 
-     var navMain = $(".navbar-collapse"); // avoid dependency on #id
-     // "a:not([data-toggle])" - to avoid issues caused
-     // when you have dropdown inside navbar
-     navMain.on("click", "a:not([data-toggle])", null, function () {
-         navMain.collapse('hide');
-     });
- });
+    $(function () {
+      var navMain = $(".navbar-collapse"); // avoid dependency on #id
+      // "a:not([data-toggle])" - to avoid issues caused
+      // when you have dropdown inside navbar
+      navMain.on("click", "a:not([data-toggle])", null, function () {
+        navMain.collapse('hide');
+      });
+    });
   </script>
 
 
